@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<QALCULATE version="0.9.4">
+<QALCULATE version="0.9.5">
   <category>
     <_title>Matrices &amp; Vectors</_title>
     <builtin_function name="vector">
@@ -291,6 +291,20 @@
       <argument type="vector" index="1">
         <_title>Vector</_title>
         <test>false</test>
+      </argument>
+    </function>
+    <function>
+      <_title>Cross Product</_title>
+      <_names>r:cross</_names>
+      <_description>Calculates the cross product of a 3-dimensional vector.</_description>
+      <expression>[(element(\x,2)*element(\y,3))-(element(\x,3)*element(\y,2)),(element(\x,3)*element(\y,1))-(element(\x,1)*element(\y,3)),(element(\x,1)*element(\y,2))-(element(\x,2)*element(\y,1))]</expression>
+      <argument type="vector" index="1">
+        <_title>Vector 1</_title>
+        <condition>dimension(\x)==3</condition>
+      </argument>
+      <argument type="vector" index="2">
+        <_title>Vector 2</_title>
+        <condition>dimension(\x)==3</condition>
       </argument>
     </function>
   </category>
@@ -1974,6 +1988,12 @@
       </argument>
       <argument index="2">
         <_title>Variable of integration</_title>
+      </argument>
+      <argument index="3">
+        <_title>Lower limit</_title>
+      </argument>
+      <argument index="4">
+        <_title>Upper limit</_title>
       </argument>
     </builtin_function>
     <function>
