@@ -52,7 +52,7 @@
 *
 * If the program uses autoconf, put the following in configure.in:
 * \code PKG_CHECK_MODULES(QALCULATE, [
-*	libqalculate >= 0.9.4
+*	libqalculate >= 0.9.5
 *	])
 * AC_SUBST(QALCULATE_CFLAGS)
 * AC_SUBST(QALCULATE_LIBS) \endcode
